# mcp-repl

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  blog-post.md  mcp-repl-useR-lightning.css  mcp-repl-useR-lightning.html  mcp-repl-useR-lightning.qmd  pyproject.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  release-backfill.yml  release.yml
.mcp-repl-logs/: mcp-repl-1773357862537-91070.jsonl  mcp-repl-1773357900158-91185.jsonl
.mcp-repl-trace/: trace-1773357862529-91068.jsonl  trace-1773357862529-91068.pretty.json  trace-1773357900149-91180.jsonl  trace-1773357900149-91180.pretty.json
docs/: architecture.md  debugging.md  index.md  output_timeline.md  releasing.md  remove-pager-stage1-plan.md  sandbox-config.md  sandbox.md  testing.md  worker_sideband_protocol.md
docs/adr/: 0001-stdin-close-graceful-shutdown.md
docs/futurework/: advisory-worker-write-observations.md  claude-sandbox-inherit.md  claude-session-lifecycle-and-integration.md  codex-install-managed-network-defaults.md  composable-tool-descriptions.md  managed-network-follow-up.md  mcp-client-install-managed-network-defaults.md  offline-manual-surfaces.md  output-ring-test-isolation.md  per-turn-history-bundles.md  portable-plugin-skill-mcp-bundle.md  project-local-mcp-repl-config.md  pypi-distribution.md  r-embedding-minimal-callbacks.md  r-graphics-device-for-incremental-plot-emission.md  r-worker-simplification-and-server-inferred-completion.md  r-worker-turn-boundary-simplification.md  repl-interaction-rough-edges.md  repl-tool-description-extras.md  rscript-backed-plot-reference-tests.md  server-backend-boundary.md  sidecar-viewer-observability.md  stdin-transport-single-owner.md  stronger-worker-child-containment.md  test-helper-classification-consolidation.md  unified-output-timeline-pipeline.md  windows-stdin-single-owner.md  worker-pty-stdin-transport.md  worker-session-tempdir-rotation.md
docs/plans/: README.md  tech-debt.md
docs/tool-descriptions/: repl_prepare_python.md  repl_reset_tool.md  repl_tool.md  repl_tool_python.md  repl_tool_python_pager.md  repl_tool_r.md  repl_tool_r_pager.md
examples/: README.md  chatlas_async_files_mode.py  chatlas_async_pager_mode.py  chatlas_file_tools.py  chatlas_files_mode.py  chatlas_pager_mode.py  chatlas_sync_files_mode.py  chatlas_sync_pager_mode.py  ellmer-mcp-repl-files.R  ellmer-mcp-repl-helpers.R  ellmer-mcp-repl.R  mcp_repl_tool.py
examples/chatlas/: README.md  chatlas_async_files_mode.py  chatlas_async_pager_mode.py  chatlas_files_mode.py  chatlas_pager_mode.py  chatlas_tools.py
mcp-repl-useR-lightning-assets/: render-chat-scenario.R
python/: driver.py  embedded.py
r/: mcp_console.R  mcp_repl.R
scripts/: codex-stdio-trace-win.py  codex-traced-mcp-repl.cmd  diff_composition.py  install.ps1  install.sh  mcp-stdio-trace.py  public_api_suite.py  test_codex_stdio_trace_win.py  test_diff_composition.py  test_public_api_suite.py
src/: backend.rs  builtin_adapter_ack_state.rs  builtin_adapter_request_state.rs  claude.rs  completion_reply.rs  debug_logs.rs  debug_repl.rs  diagnostics.rs  event_log.rs  input_protocol.rs  input_state.rs  install.rs  ipc.rs  legacy_ack_state.rs  legacy_request_state.rs  lib.rs  main.rs  managed_network.rs  managed_network_proxy.rs  output_capture.rs  output_snapshot.rs  output_stream.rs  output_timeline.rs  oversized_output.rs  pending_output_tape.rs  python_ffi.rs  python_input_queue.rs  python_prepare.rs  python_runtime.rs  python_session.rs  python_turn_input.rs  python_worker.rs  r_controls.rs  r_graphics.rs  r_htmd.rs  r_session.rs  reply_overflow.rs  reply_presentation.rs  resolved_output.rs  sandbox.rs  (+14 more)
src/ipc/: emit.rs  protocol.rs  server_connection.rs  test_support.rs  transport.rs  worker_connection.rs
src/pager/: merge.rs  mod.rs  search.rs
src/python_session/: state.rs  stdio.rs  unix_stdin.rs  windows_stdin.rs
src/sandbox/: codex_policy.rs  restricted_read_only_platform_defaults.sbpl  seatbelt_base_policy.sbpl
src/server/: overflow.rs  response.rs  tests.rs
src/worker_process/: backend_driver.rs  control_prefix.rs  interrupt.rs  output_state.rs  pending_poll.rs  reply_state.rs  request_lifecycle.rs  request_reply.rs  restart.rs  sandbox_state.rs  session_lifecycle.rs  session_reset_reply.rs  test_support.rs  worker_launch.rs  write_dispatch.rs  write_flow.rs  write_preflight.rs
tests/: README.md  claude_clear_binding.rs  claude_integration.rs  client_config_dual_backend.rs  codex_approvals_tui.rs  codex_integration.rs  debug_events_env.rs  debug_events_tool_calls.rs  debug_repl_prompt.rs  docs_contracts.rs  ellmer_examples.rs  install_dual_backend.rs  install_shell_script.rs  interrupt.rs  manage_session_behavior.rs  mcp_transcripts.rs  oversized_output_cli.rs  pager.rs  pager_flags.rs  pager_hits_seek.rs  pager_page_size.rs  pager_seek.rs  pager_skip.rs  pager_where.rs  plot_images.rs  python_backend.rs  python_help_snapshots.rs  python_plot_images.rs  python_repl_prepare.rs  python_snapshots.rs  r_console_encoding.rs  r_file_show.rs  r_help.rs  r_manuals.rs  r_protocol.rs  r_startup.rs  r_vignettes.rs  refactor_coverage.rs  release_cli_contract.rs  release_script.rs  (+18 more)
tests/common/: mod.rs
tests/fixtures/: zod-worker.rs
tests/snapshots/: claude_integration__claude_live_install_integration.snap  claude_integration__claude_live_install_integration@transcript.snap  claude_integration__claude_live_integration.snap  claude_integration__claude_live_integration@transcript.snap  codex_approvals_tui__linux__codex_exec_initial_sandbox_state.snap  codex_approvals_tui__linux__codex_exec_initial_sandbox_state_plain.snap  codex_approvals_tui__linux__codex_exec_wire_sandbox_state_meta.snap  codex_approvals_tui__macos__codex_exec_initial_sandbox_state.snap  codex_approvals_tui__macos__codex_exec_initial_sandbox_state_plain.snap  codex_approvals_tui__macos__codex_exec_wire_sandbox_state_meta.snap  codex_integration__linux__codex_exec_initial_sandbox_state.snap  codex_integration__linux__codex_exec_initial_sandbox_state_plain.snap  (+81 more)
(+45 files in other folders)
