[package]
  name        = "mcp-repl"
  version     = "0.2.0-dev"
  edition     = "2024"
  publish     = false
  description = "MCP server exposing a long-lived interactive REPL runtime (R or Python backend) over stdio."
  repository  = "https://github.com/posit-dev/mcp-repl"
  license     = "Apache-2.0"
  autotests   = false

[[bin]]
  name = "mcp-repl"
  path = "src/main.rs"
  test = false

[[example]]
  name = "zod-worker"
  path = "tests/fixtures/zod-worker.rs"

[[test]]
name = "claude_integration"
path = "tests/claude_integration.rs"
test = false

[[test]]
name = "codex_approvals_tui"
path = "tests/codex_approvals_tui.rs"
test = false

[[test]]
name = "debug_events_env"
path = "tests/debug_events_env.rs"
test = false

[[test]]
name = "debug_events_tool_calls"
path = "tests/debug_events_tool_calls.rs"
test = false

[[test]]
name = "debug_repl_prompt"
path = "tests/debug_repl_prompt.rs"
test = false

[[test]]
name = "docs_contracts"
path = "tests/docs_contracts.rs"
test = false

[[test]]
name = "install_dual_backend"
path = "tests/install_dual_backend.rs"
test = false

[[test]]
name = "install_shell_script"
path = "tests/install_shell_script.rs"
test = false

[[test]]
name = "interrupt"
path = "tests/interrupt.rs"
test = false

[[test]]
name = "manage_session_behavior"
path = "tests/manage_session_behavior.rs"
test = false

[[test]]
name = "mcp_transcripts"
path = "tests/mcp_transcripts.rs"
test = false

[[test]]
name = "oversized_output_cli"
path = "tests/oversized_output_cli.rs"
test = false

[[test]]
name = "pager"
path = "tests/pager.rs"
test = false

[[test]]
name = "pager_flags"
path = "tests/pager_flags.rs"
test = false

[[test]]
name = "pager_hits_seek"
path = "tests/pager_hits_seek.rs"
test = false

[[test]]
name = "pager_page_size"
path = "tests/pager_page_size.rs"
test = false

[[test]]
name = "pager_seek"
path = "tests/pager_seek.rs"
test = false

[[test]]
name = "pager_skip"
path = "tests/pager_skip.rs"
test = false

[[test]]
name = "pager_where"
path = "tests/pager_where.rs"
test = false

[[test]]
name = "plot_images"
path = "tests/plot_images.rs"
test = false

[[test]]
name = "python_backend"
path = "tests/python_backend.rs"
test = false

[[test]]
name = "python_help_snapshots"
path = "tests/python_help_snapshots.rs"
test = false

[[test]]
name = "python_plot_images"
path = "tests/python_plot_images.rs"
test = false

[[test]]
name = "python_program_selection"
path = "tests/python_program_selection.rs"
test = false

[[test]]
name = "r_console_encoding"
path = "tests/r_console_encoding.rs"
test = false

[[test]]
name = "r_file_show"
path = "tests/r_file_show.rs"
test = false

[[test]]
name = "r_help"
path = "tests/r_help.rs"
test = false

[[test]]
name = "r_manuals"
path = "tests/r_manuals.rs"
test = false

[[test]]
name = "r_protocol"
path = "tests/r_protocol.rs"
test = false

[[test]]
name = "r_startup"
path = "tests/r_startup.rs"
test = false

[[test]]
name = "r_vignettes"
path = "tests/r_vignettes.rs"
test = false

[[test]]
name = "refactor_coverage"
path = "tests/refactor_coverage.rs"
test = false

[[test]]
name = "repl_surface"
path = "tests/repl_surface.rs"
test = false

[[test]]
name = "reticulate_py_help"
path = "tests/reticulate_py_help.rs"
test = false

[[test]]
name = "sandbox"
path = "tests/sandbox.rs"
test = false

[[test]]
name = "sandbox_state_updates"
path = "tests/sandbox_state_updates.rs"
test = false

[[test]]
name = "server_smoke"
path = "tests/server_smoke.rs"
test = false

[[test]]
name = "session_endings"
path = "tests/session_endings.rs"
test = false

[[test]]
name = "windows_suite_server_lock"
path = "tests/windows_suite_server_lock.rs"
test = false

[[test]]
name = "worker_ipc_disconnect"
path = "tests/worker_ipc_disconnect.rs"
test = false

[[test]]
name = "write_stdin_batch"
path = "tests/write_stdin_batch.rs"
test = false

[[test]]
name = "write_stdin_behavior"
path = "tests/write_stdin_behavior.rs"
test = false

[[test]]
name = "write_stdin_edge_cases"
path = "tests/write_stdin_edge_cases.rs"
test = false

[[test]]
name = "zod_protocol"
path = "tests/zod_protocol.rs"
test = false

[dependencies]
  ctor = "0.6.3"
  base64 = "0.22.1"
  htmd = "0.5"
  libc = "0.2"
  libloading = "0.8.9"
  harp = { git = "https://github.com/t-kalinowski/ark", rev = "43441280f5bb84d9566e8f47f1c6b8614d056340" }
  libr = { git = "https://github.com/t-kalinowski/ark", rev = "43441280f5bb84d9566e8f47f1c6b8614d056340" }
  memchr = "2.8.0"
  regex-lite = "0.1"
  rmcp = { version = "1.2.0", features = [
    "client",
    "transport-child-process",
    "transport-io",
  ] }
  schemars = "1.2"
  serde = { version = "1", features = ["derive"] }
  serde_json = "1"
  sysinfo = "0.38.4"
  tempfile = "3.27.0"
  tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
  toml_edit = "0.25.5"
[target.'cfg(target_os = "linux")'.dependencies]
  landlock    = "0.4.4"
  seccompiler = "0.5.0"

[target.'cfg(unix)'.dependencies]
  portable-pty = "0.9.0"

[target.'cfg(target_os = "macos")'.dependencies]
  url = "2.5.8"

[target.'cfg(target_os = "windows")'.dependencies]
  windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_JobObjects",
    "Win32_System_Pipes",
    "Win32_System_Threading",
  ] }

[dev-dependencies]
  blake3 = "1.8.3"
  insta = { version = "1.46.3", features = ["yaml"] }
  tokio = { version = "1", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
  ] }
  vt100 = "0.16.2"

[features]
  echo-heuristics = []

[profile.dev.package]
  insta.opt-level   = 3
  similar.opt-level = 3
