[package]
  name        = "mcp-repl"
  version     = "0.3.0-dev"
  edition     = "2024"
  publish     = false
  description = "MCP server exposing a long-lived interactive REPL runtime (R or Python backend) over stdio."
  repository  = "https://github.com/posit-dev/mcp-repl"
  license     = "Apache-2.0"

[[bin]]
  name = "mcp-repl"
  path = "src/main.rs"

[[example]]
  name = "zod-worker"
  path = "tests/fixtures/zod-worker.rs"

[dependencies]
  ctor = "1.0.7"
  base64 = "0.22.1"
  htmd = "0.5.4"
  libc = "0.2"
  libloading = "0.9.0"
  harp = { git = "https://github.com/t-kalinowski/ark", tag = "0.1.222" }
  libr = { git = "https://github.com/t-kalinowski/ark", tag = "0.1.222" }
  memchr = "2.8.2"
  regex-lite = "0.1"
  # Harp loads embedded R module assets during R startup. In debug builds,
  # rust-embed defaults to reading those assets from Cargo's source checkout,
  # which is outside Codex's `:minimal` read profile.
  rust-embed = { version = "8.11.0", features = ["debug-embed"] }
  rmcp = { version = "1.8.0", features = [
    "client",
    "transport-child-process",
    "transport-io",
  ] }
  schemars = "1.2.1"
  serde = { version = "1", features = ["derive"] }
  serde_json = "1"
  sysinfo = "0.39.5"
  tempfile = "3.27.0"
  tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
  toml_edit = "0.25.12"
  url = "2.5.8"
[target.'cfg(target_os = "linux")'.dependencies]
  globset     = "0.4"
  landlock    = "0.4.5"
  seccompiler = "0.5.0"

[target.'cfg(unix)'.dependencies]
  portable-pty = "0.9.0"

[target.'cfg(target_os = "windows")'.dependencies]
  windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Rpc",
  ] }
  windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_Security_Authorization",
    "Win32_Security_Credentials",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_JobObjects",
    "Win32_System_Pipes",
    "Win32_System_Threading",
  ] }

[dev-dependencies]
  blake3 = "1.8.5"
  insta = { version = "1.48.0", features = ["yaml"] }
  tokio = { version = "1", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
  ] }
  vt100 = "0.16.2"

[features]
  echo-heuristics = []

[profile.dev.package]
  insta.opt-level   = 3
  similar.opt-level = 3
