[build-system]
requires = ["maturin>=1.11,<2"]
build-backend = "maturin"

[project]
name = "posit-mcp-repl"
dynamic = ["version"]
description = "MCP server exposing a long-lived interactive REPL runtime (R or Python backend) over stdio."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = ["mcp", "repl", "r", "python"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Interpreters",
]

[project.urls]
Homepage = "https://github.com/posit-dev/mcp-repl"
Repository = "https://github.com/posit-dev/mcp-repl"
Issues = "https://github.com/posit-dev/mcp-repl/issues"

[tool.maturin]
bindings = "bin"
strip = true
compatibility = "pypi"
